test/modules/diten/usemodule/inner_uses_all_outer.good
inner_uses_all_outer.chpl:6: In function 'f':
inner_uses_all_outer.chpl:9: error: 'a' undeclared (first use this function)
